--- a/水雨情/雨情报表分析.html
+++ b/水雨情/雨情报表分析.html
@@ -33,6 +33,15 @@
     .col-sm-4 {
         margin-top: 2.5px;
     }
+
+   /* #last30
+    {
+        transform:rotate(180deg);
+        -ms-transform:rotate(180deg); 	!* IE 9 *!
+        -moz-transform:rotate(180deg); 	!* Firefox *!
+        -webkit-transform:rotate(180deg); !* Safari 和 Chrome *!
+        -o-transform:rotate(180deg); 	!* Opera *!
+    }*/
   </style>
 </head>
 
@@ -325,10 +334,35 @@
                     <section class="panel">
                         <header class="panel-heading">
                             各县（市）区面平均雨量（毫米）
-                            <!--<span class="tools pull-right">
-                                <a href="javascript:;" class="fa fa-chevron-down"></a>
-                                <a href="javascript:;" class="fa fa-times"></a>
-                            </span>-->
+                            <section style="width: 100%; height: 80px; background-color: #c3c3c3">
+                                <div style="width:100%; height:100%;">
+                                    <label class="control-label" style="float: left; margin-top: 30px; margin-left: 100px">行政区：</label>
+                                    <div class="col-md-2" style="margin-top: 20px;">
+                                        <input class="form-control">
+                                    </div>
+
+                                    <label class="control-label" style="float: left; margin-top: 30px;">采集点：</label>
+                                    <div class="col-md-2" style=" margin-top: 20px;">
+                                        <input class="form-control">
+                                    </div>
+
+                                    <label class="control-label" style="float: left; margin-top: 30px;">起止时间</label>
+                                    <div class="col-md-3" style=" margin-top: 20px;">
+                                        <div class="input-group input-large custom-date-range" data-date="2017-11-11" data-date-format="yyyy-mm-dd">
+                                            <input type="text" class="form-control dpd1" name="planBegin" required>
+                                            <span class="input-group-addon">To</span>
+                                            <input type="text" class="form-control dpd2" name="planEnd" required>
+                                        </div>
+                                    </div>
+                                    <div class="col-md-3" style=" margin-top: 20px;">
+                                        <span >
+                                            <button class="btn btn-primary" type="button">&nbsp搜&nbsp索&nbsp</button>
+                                            <button class="btn btn-primary" type="reset">&nbsp重&nbsp置&nbsp</button>
+                                        </span>
+                                    </div>
+
+                                </div>
+                            </section>
                         </header>
                         <div class="panel-body">
                             <section  style="width: 100%; height: 400px">
@@ -350,6 +384,21 @@
                         </div>
                     </section>
                 </div>-->
+            </div>
+
+            <div class="row">
+                <div class="col-sm-12">
+                    <section class="panel">
+                        <header class="panel-heading">
+                            全市月平均雨量排行榜（毫米）
+                        </header>
+                        <div class="panel-body" style="padding-top: 0px;">
+                            <section  style="width: 100%; height: 450px">
+                                <div id="all-point">报表加载中...</div>
+                            </section>
+                        </div>
+                    </section>
+                </div>
             </div>
 
             <div class="row">
@@ -436,6 +485,7 @@
 <script type="text/javascript" src="../js/fusionCharts/fusioncharts.js"></script>
 <script type="text/javascript" src="../js/fusionCharts/themes/fusioncharts.theme.fint.js"></script>
 
+<!--采集点分时柱状图-->
 <script>
     /** ===========饼状图============== */
     FusionCharts.ready(function () {
@@ -447,7 +497,7 @@
             dataFormat: 'json',
             dataSource: {
                 "chart": {
-                    "caption": "Letters Used in a Novel",
+                    "caption": "宁波全域雨量比例",
                     "formatnumberscale": "0",
                     "showBorder": "0",
                     "showLegend": "1",
@@ -457,92 +507,45 @@
                     //Setting legend to appear on right side
                     "legendPosition" : "right",
                     //Caption for legend
-                    "legendCaption" : "Alphabet Used: ",
+                    "legendCaption" : "行政区划: ",
                     //Customization for legend scroll bar cosmetics
                     "legendScrollBgColor": "#cccccc",
                     "bgColor": "#8c8c8c",
                     "legendScrollBarColor": "#999999"
                 },
                 "data": [{
-                    "label": "A",
+                    "label": "海曙区",
                     "value": "91852"
                 },{
-                    "label": "B",
+                    "label": "江北区",
                     "value": "51852"
                 }, {
-                    "label": "C",
+                    "label": "北仑区",
                     "value": "88168"
                 }, {
-                    "label": "D",
+                    "label": "镇海区",
                     "value": "73897"
                 }, {
-                    "label": "E",
+                    "label": "鄞州区",
                     "value": "93933"
                 }, {
-                    "label": "F",
+                    "label": "奉化区",
                     "value": "19289"
                 }, {
-                    "label": "G",
+                    "label": "余姚市",
                     "value": "79623"
                 }, {
-                    "label": "H",
+                    "label": "慈溪市",
                     "value": "48262"
                 }, {
-                    "label": "I",
+                    "label": "象山县",
                     "value": "29162"
                 }, {
-                    "label": "J",
+                    "label": "宁海县",
                     "value": "96878"
                 }, {
-                    "label": "K",
+                    "label": "宁波市",
                     "value": "81241"
-                }, {
-                    "label": "L",
-                    "value": "40652",
-                    "issliced": "1"
-                }, {
-                    "label": "M",
-                    "value": "37581",
-                    "issliced": "1"
-                }, {
-                    "label": "N",
-                    "value": "2882"
-                }, {
-                    "label": "O",
-                    "value": "746"
-                }, {
-                    "label": "P",
-                    "value": "7155"
-                }, {
-                    "label": "Q",
-                    "value": "12072"
-                }, {
-                    "label": "R",
-                    "value": "45608"
-                }, {
-                    "label": "S",
-                    "value": "72570"
-                }, {
-                    "label": "T",
-                    "value": "44799"
-                }, {
-                    "label": "U",
-                    "value": "71887"
-                }, {
-                    "label": "V",
-                    "value": "78170"
-                }, {
-                    "label": "W",
-                    "value": "94345"
-                }, {
-                    "label": "X",
-                    "value": "5434"
-                }, {
-                    "label": "Y",
-                    "value": "34355"
-                }, {
-                    "label": "Z",
-                    "value": "2323"
                 }]
             }
         });
@@ -914,6 +917,220 @@
                 ]
             }
         }).render();
+    });
+</script>
+
+<!--所有采集点的雨量-->
+<script>
+    FusionCharts.ready(function () {
+        var conversionChart = new FusionCharts({
+            type: 'bubble',
+            renderAt: 'all-point',
+            width: '100%',
+            height: '450',
+            dataFormat: 'json',
+            dataSource: {
+                "chart": {
+                    "theme": "fint",
+                    "caption": "所有采集点雨量分布",
+                    "subcaption": "周数据",
+                    "xAxisMinValue": "0",
+                    "xAxisMaxValue": "100",
+                    "yAxisMinValue": "0",
+                    "yAxisMaxValue": "30000",
+                    "plotFillAlpha": "70",
+                    "plotFillHoverColor": "#6baa01",
+                    "showPlotBorder": "0",
+                    "xAxisName": "雨量/流失",
+                    "yAxisName": "采集点",
+                    "numDivlines": "2",
+                    "showValues": "1",
+                    "showTrendlineLabels": "0",
+                    "plotTooltext": "$name :  - $zvalue%",
+                    //Drawing quadrants on chart
+                    "drawQuadrant" : "1",
+                    "quadrantLabelTL": "低雨量 / 高流失",
+                    "quadrantLabelTR": "高雨量 / 高流失",
+                    "quadrantLabelBL": "低雨量 / 低流失",
+                    "quadrantLabelBR": "高雨量 / 低流失",
+                    "quadrantXVal": "54",
+                    "quadrantYVal": "12000",
+                    "quadrantLineThickness" : "2",
+                    "quadrantLineAlpha": "30",
+                    "quadrantLineColor": "#ac3d44",
+                    "quadrantLineIsDashed": "1",
+                    "quadrantLineDashLen": "2",
+                    "quadrantLineDashGap": "3",
+                    "quadrantLabelPadding": "5"
+                },
+                "categories": [
+                    {
+                        "category": [
+                            {
+                                "label": "0",
+                                "x": "0"
+                            },
+                            {
+                                "label": "$20",
+                                "x": "20",
+                                "showverticalline": "1"
+                            },
+                            {
+                                "label": "$40",
+                                "x": "40",
+                                "showverticalline": "1"
+                            },
+                            {
+                                "label": "$60",
+                                "x": "60",
+                                "showverticalline": "1"
+                            },
+                            {
+                                "label": "$80",
+                                "x": "80",
+                                "showverticalline": "1"
+                            },
+                            {
+                                "label": "$100",
+                                "x": "100",
+                                "showverticalline": "1"
+                            }
+                        ]
+                    }
+                ],
+                "dataset": [
+                    {
+                        "color":"#00aee4",
+                        "data": [
+                            {
+                                "x": "80",
+                                "y": "15000",
+                                "z": "24",
+                                "name": "华岩寺水库"
+                            },
+                            {
+                                "x": "60",
+                                "y": "18500",
+                                "z": "26",
+                                "name": "华峙水库"
+                            },
+                            {
+                                "x": "50",
+                                "y": "19450",
+                                "z": "19",
+                                "name": "黄龙坑水库"
+                            },
+                            {
+                                "x": "65",
+                                "y": "10500",
+                                "z": "8",
+                                "name": "岙张水库"
+                            },
+                            {
+                                "x": "43",
+                                "y": "8750",
+                                "z": "5",
+                                "name": "城湾水库"
+                            },
+                            {
+                                "x": "32",
+                                "y": "22000",
+                                "z": "10",
+                                "name": "黄土岭"
+                            },
+                            {
+                                "x": "35",
+                                "y": "10060",
+                                "z": "5",
+                                "name": "燕山水库"
+                            },
+                            {
+                                "x": "15",
+                                "y": "1060",
+                                "z": "3",
+                                "name": "杨树湾水库"
+                            },
+                            {
+                                "x": "10",
+                                "y": "1560",
+                                "z": "2",
+                                "name": "花龙庄"
+                            },
+                            {
+                                "x": "20",
+                                "y": "3560",
+                                "z": "3",
+                                "name": "东钱湖水库"
+                            },
+                            {
+                                "x": "50",
+                                "y": "4560",
+                                "z": "3",
+                                "name": "四明湖雨量"
+                            },
+                            {
+                                "x": "43",
+                                "y": "5750",
+                                "z": "5",
+                                "name": "丈梅水库"
+                            },
+                            {
+                                "x": "3",
+                                "y": "750",
+                                "z": "2",
+                                "name": "赵家山雨量"
+                            },
+                            {
+                                "x": "10",
+                                "y": "1750",
+                                "z": "2",
+                                "name": "洞口庙水库"
+                            },
+                            {
+                                "x": "13",
+                                "y": "2750",
+                                "z": "2",
+                                "name": "周坑岙水库"
+                            },
+                            {
+                                "x": "30",
+                                "y": "20000",
+                                "z": "10",
+                                "name": "黄土岭"
+                            },
+
+                            {
+                                "x": "44",
+                                "y": "13000",
+                                "z": "9",
+                                "name": "牟山湖"
+                            }
+                        ]
+                    }
+                ],
+                "trendlines": [
+                    {
+                        "line": [
+                            {
+                                "startValue": "20000",
+                                "endValue": "30000",
+                                "isTrendZone": "1",
+                                "color": "#aaaaaa",
+                                "alpha": "14"
+                            },
+                            {
+                                "startValue": "10000",
+                                "endValue": "20000",
+                                "isTrendZone": "1",
+                                "color": "#aaaaaa",
+                                "alpha": "7"
+                            }
+                        ]
+                    }
+                ]
+            }
+        });
+        conversionChart.render();
     });
 </script>
 
