--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
                             <li><a href="水雨情/雨情管理.html">雨情管理</a></li>
                             <li><a href="水雨情/雨情实时概况.html">雨情实时概况</a></li>
                             <li><a href="水雨情/雨情报表分析.html">雨情报表分析</a></li>
-                            <li><a href="#">风情管理</a></li>
-                            <li><a href="#">水情管理</a></li>
+                            <li><a href="水雨情/水情管理.html">水情管理</a></li>
+                            <li><a href="水雨情/风情管理.html">风情管理</a></li>
                             <li><a href="#">潮位管理</a></li>
                         </ul>
                     </li>
