--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <li><a href="水雨情/雨情报表分析.html">雨情报表分析</a></li>
                             <li><a href="水雨情/水情管理.html">水情管理</a></li>
                             <li><a href="水雨情/风情管理.html">风情管理</a></li>
-                            <li><a href="#">潮位管理</a></li>
+                            <li><a href="水雨情/潮位管理.html">潮位管理</a></li>
                         </ul>
                     </li>
 					<li class="dropdown">
