--- a/运维管理/供应商管理.html
+++ b/运维管理/供应商管理.html
@@ -13,7 +13,10 @@
   <link href="../js/advanced-datatable/css/demo_page.css" rel="stylesheet" />
   <link href="../js/advanced-datatable/css/demo_table.css" rel="stylesheet" />
   <link href="../js/data-tables/DT_bootstrap.css" rel="stylesheet" />
-
+  <!--gritter css 小提示-->
+  <link rel="stylesheet" type="text/css" href="../js/gritter/css/jquery.gritter.css" />
+  <!--jquery-confirm-->
+  <link rel="stylesheet" href="../js/jquery-confirm/jquery-confirm.min.css" />
   <link href="../css/style.css" rel="stylesheet">
   <link href="../css/style-responsive.css" rel="stylesheet">
 
@@ -414,14 +417,14 @@
 									</thead>
 									<tbody>
 										<tr>
-											<td class= "sorting_1">GYS-HU-14570221</td>
+											<td style="color: #4792d9">GYS-HU-14570221</td>
 											<td>杭州宁德机械</td>
 											<td>经销商</td>
 											<td>1300-10000</td>
 											<td>良好</td>
 											<td>勾文曲</td>
 											<td>0571-28192831</td>
-											<td>已评审</td>
+											<td style="color: #00FF00">已评审</td>
 											<td>已复核</td>
 											<td>
 												<div class="btn-group">
@@ -429,21 +432,21 @@
 														供应商操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">编辑供应商</a></li>
-														<li><a href="#">删除供应商</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑供应商</a></li>
+														<li><a href="javascript:delete_fun()">删除供应商</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
-										<tr>
-											<td class= "sorting_1">GYS-HU-14570221</td>
+										<tr >
+											<td style="color: #4792d9">GYS-HU-14570221</td>
 											<td>山东蓝翔科技</td>
 											<td>经销商</td>
 											<td>100-10000</td>
 											<td>优秀</td>
 											<td>蓝翔</td>
 											<td>0121-28192831</td>
-											<td>已评审</td>
+											<td style="color: #00FF00">已评审</td>
 											<td>已复核</td>
 											<td>
 												<div class="btn-group">
@@ -451,21 +454,21 @@
 														供应商操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">编辑供应商</a></li>
-														<li><a href="#">删除供应商</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑供应商</a></li>
+														<li><a href="javascript:delete_fun()">删除供应商</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr>
-											<td class= "sorting_1">GYS-HU-14570221</td>
+											<td style="color: #4792d9">GYS-HU-14570221</td>
 											<td>萧山爱课室科技</td>
 											<td>经销商</td>
 											<td>10-100000</td>
 											<td>良好</td>
 											<td>爱客室</td>
 											<td>0571-28192831</td>
-											<td>已评审</td>
+											<td style="color: #00FF00">已评审</td>
 											<td>已复核</td>
 											<td>
 												<div class="btn-group">
@@ -473,21 +476,21 @@
 														供应商操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">编辑供应商</a></li>
-														<li><a href="#">删除供应商</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑供应商</a></li>
+														<li><a href="javascript:delete_fun()">删除供应商</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr>
-											<td class= "sorting_1">GYS-HU-14570221</td>
+											<td style="color: #4792d9">GYS-HU-14570221</td>
 											<td>北京全新科技</td>
 											<td>经销商</td>
 											<td>100-500000</td>
 											<td>优秀</td>
 											<td>胡铨鑫</td>
 											<td>000-93092912</td>
-											<td>已评审</td>
+											<td style="color: #00FF00">已评审</td>
 											<td>已复核</td>
 											<td>
 												<div class="btn-group">
@@ -495,21 +498,21 @@
 														供应商操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">编辑供应商</a></li>
-														<li><a href="#">删除供应商</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑供应商</a></li>
+														<li><a href="javascript:delete_fun()">删除供应商</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr>
-											<td class= "sorting_1">GYS-HU-14570221</td>
+											<td style="color: #4792d9">GYS-HU-14570221</td>
 											<td>福建必知机械制造</td>
 											<td>生产厂家</td>
 											<td>0-10000</td>
 											<td>良好</td>
 											<td>李碧珍</td>
 											<td>0921-28192831</td>
-											<td>已评审</td>
+											<td>未评审</td>
 											<td>已复核</td>
 											<td>
 												<div class="btn-group">
@@ -517,21 +520,21 @@
 														供应商操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">编辑供应商</a></li>
-														<li><a href="#">删除供应商</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑供应商</a></li>
+														<li><a href="javascript:delete_fun()">删除供应商</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr>
-											<td class= "sorting_1">GYS-HU-14570221</td>
+											<td style="color: #4792d9">GYS-HU-14570221</td>
 											<td>海南速记机械</td>
 											<td>生产厂家</td>
 											<td>100-10000</td>
 											<td>良好</td>
 											<td>高书记</td>
 											<td>0921-28192831</td>
-											<td>已评审</td>
+											<td>未评审</td>
 											<td>已复核</td>
 											<td>
 												<div class="btn-group">
@@ -539,8 +542,8 @@
 														供应商操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">编辑供应商</a></li>
-														<li><a href="#">删除供应商</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑供应商</a></li>
+														<li><a href="javascript:delete_fun()">删除供应商</a></li>
 													</ul>
 												</div>
 											</td>
@@ -567,6 +570,49 @@
     </div>
     <!-- main content end-->
 </section>
+<!-- Modal -->
+<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                <h4 class="modal-title">供应商</h4>
+            </div>
+            <div class="modal-body">
+
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label class="col-lg-2 col-sm-2 control-label">供应商号</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" value="GYS-HU-145702211">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label  class="col-lg-2 col-sm-2 control-label">企业简称</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" value="杭州宁德机械">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label  class="col-lg-2 col-sm-2 control-label">是经销商</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" value="生产厂家">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-lg-10">
+                            <button data-dismiss="modal" class="btn btn-primary" type="button">确定</button>
+                            <button data-dismiss="modal" class="btn btn-default" type="button">取消</button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- modal -->
 
 
 <!-- Placed js at the end of the document so the pages load faster -->
@@ -576,19 +622,70 @@
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/modernizr.min.js"></script>
 <script src="../js/jquery.nicescroll.js"></script>
-
-
+<!-- <!--gritter css 小提示-->
+<script src="../js/gritter/js/jquery.gritter.js" type="text/javascript"></script>
+<script src="../js/gritter/js/gritter-init.js" type="text/javascript"></script>
 <!--dynamic table-->
 <script type="text/javascript" language="javascript" src="../js/advanced-datatable/js/jquery.dataTables.js"></script>
 <script type="text/javascript" src="../js/data-tables/DT_bootstrap.js"></script>
 <!--dynamic table initialization -->
 <script type="text/javascript" src="../js/dynamic_table_init.js"></script>
-
-
+<!--jquery-confirm-->
+<script src="../js/jquery-confirm/jquery-confirm.min.js"></script>
 <!--common scripts for all pages-->
 <script src="../js/scripts.js"></script>
 <script type="text/javascript">
-    	
+    jQuery(document).ready(function() {
+        //显示小提示
+        TipsNotice(null, "退货单管理页面加载成功！");
+    });
+
+    function delete_fun() {
+        $.confirm({
+            icon: 'fa fa-warning',
+            title: '删除提示！',
+            content: '确定要删除该退货单吗?',
+            type: 'dark',
+            autoClose: 'cancel|8000',
+            buttons: {
+                ok: {
+                    text: "确定",
+                    btnClass: 'btn-primary',
+                    keys: ['enter'],
+                    action: function(){
+                        TipsNotice(null, "您的退货单删除成功！");
+                    }
+                },
+                cancel: {
+                    text: "取消",
+                    btnClass: 'btn-primary',
+                    keys: ['esc'],
+                    /*action:function () {
+                        console.info("你点击了取消按钮！")
+                    }*/
+                }
+            }
+        });
+    }
+
+    function add() {
+        $('#chevron-btn').removeClass("fa fa-chevron-down").addClass("fa fa-chevron-up");
+        $('#add-panel').hide();
+        TipsNotice(null,'供应商添加成功！');
+    }
+
+    function TipsNotice(title, text) {
+        $.gritter.add({
+            title: title || " 温馨提示 NOTICE ",
+            text:  text || "没有消息！",
+            image:  '../images/notice.jpg',
+            sticky: false,
+            time: 3000,
+            speed:5000,
+            position: 'bottom-right',
+            class_name: 'gritter-light'
+        });
+    }
 </script>
 
 </body>
