--- a/运维管理/验收管理.html
+++ b/运维管理/验收管理.html
@@ -13,6 +13,11 @@
   <link href="../js/advanced-datatable/css/demo_page.css" rel="stylesheet" />
   <link href="../js/advanced-datatable/css/demo_table.css" rel="stylesheet" />
   <link href="../js/data-tables/DT_bootstrap.css" rel="stylesheet" />
+    <!--gritter css 小提示-->
+    <link rel="stylesheet" type="text/css" href="../js/gritter/css/jquery.gritter.css" />
+
+    <!--jquery-confirm-->
+  <link rel="stylesheet" href="../js/jquery-confirm/jquery-confirm.min.css" />
 
   <link href="../css/style.css" rel="stylesheet">
   <link href="../css/style-responsive.css" rel="stylesheet">
@@ -366,7 +371,7 @@
 										</div>
 									</div>									
 									<span class="tools pull-right">
-										<button class="btn btn-primary" type="button">确认验收</button>
+										<button class="btn btn-primary" type="button" onclick="add()">确认验收</button>
 										<button class="btn btn-primary" type="reset">重 置</button>
 									</span>
 											
@@ -410,7 +415,7 @@
 									</thead>
 									<tbody>
 										<tr class="gradeA">
-											<td>KXDH-HU-14570031</td>
+											<td style="color: #4792d9">KXDH-HU-14570031</td>
 											<td>电机-Explorer 4.0</td>
 											<td>13</td>
 											<td>设备部门</td>
@@ -418,20 +423,20 @@
 											<td>验收合格</td>
 											<td>
 												<div class="btn-group">
-													<button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
+													<button data-toggle="dropdown" type="button" class="btn btn-primary btn-sm dropdown-toggle">
 														验收单操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">查看验收单</a></li>
-														<li><a href="#">编辑验收单</a></li>
+														<li><a href="#myModal" data-toggle="modal">查看验收单</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑验收单</a></li>
 														<!-- li class="divider"></li -->
-														<li><a href="#">删除验收单</a></li>
+														<li><a href="javascript:delete_fun()">删除验收单</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr class="gradeA">
-											<td>KXDH-HU-14523139</td>
+											<td style="color: #4792d9">KXDH-HU-14523139</td>
 											<td>摄像头摄像设备-Veide30</td>
 											<td>20</td>
 											<td>设备部门</td>
@@ -439,20 +444,20 @@
 											<td style="color:red">验收不合格</td>
 											<td>
 												<div class="btn-group">
-													<button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
+													<button data-toggle="dropdown" type="button" class="btn btn-primary btn-sm dropdown-toggle">
 														验收单操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">查看验收单</a></li>
-														<li><a href="#">编辑验收单</a></li>
+                                                        <li><a href="#myModal" data-toggle="modal">查看验收单</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑验收单</a></li>
 														<!-- li class="divider"></li -->
-														<li><a href="#">删除验收单</a></li>
+														<li><a href="javascript:delete_fun()">删除验收单</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr class="gradeA">
-											<td>KXDH-HU-14570921</td>
+											<td style="color: #4792d9">KXDH-HU-14570921</td>
 											<td>电机柜-2.0</td>
 											<td>10</td>
 											<td>设备部门</td>
@@ -460,20 +465,20 @@
 											<td>验收合格</td>
 											<td>
 												<div class="btn-group">
-													<button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
+													<button data-toggle="dropdown" type="button" class="btn btn-primary btn-sm dropdown-toggle">
 														验收单操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">查看验收单</a></li>
-														<li><a href="#">编辑验收单</a></li>
+                                                        <li><a href="#myModal" data-toggle="modal">查看验收单</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑验收单</a></li>
 														<!-- li class="divider"></li -->
-														<li><a href="#">删除验收单</a></li>
+														<li><a href="javascript:delete_fun()">删除验收单</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr class="gradeA">
-											<td>KXDH-HU-14570091</td>
+											<td style="color: #4792d9">KXDH-HU-14570091</td>
 											<td>离心泵4.0</td>
 											<td>18</td>
 											<td>设备部门</td>
@@ -481,20 +486,20 @@
 											<td>验收合格</td>
 											<td>
 												<div class="btn-group">
-													<button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
+													<button data-toggle="dropdown" type="button" class="btn btn-primary btn-sm dropdown-toggle">
 														验收单操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">查看验收单</a></li>
-														<li><a href="#">编辑验收单</a></li>
+                                                        <li><a href="#myModal" data-toggle="modal">查看验收单</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑验收单</a></li>
 														<!-- li class="divider"></li -->
-														<li><a href="#">删除验收单</a></li>
+														<li><a href="javascript:delete_fun()">删除验收单</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr class="gradeA">
-											<td>KXDH-HU-14590812</td>
+											<td style="color: #4792d9">KXDH-HU-14590812</td>
 											<td>日立一体式空调-0.0</td>
 											<td>3</td>
 											<td>设备部门</td>
@@ -502,20 +507,20 @@
 											<td>验收合格</td>
 											<td>
 												<div class="btn-group">
-													<button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
+													<button data-toggle="dropdown" type="button" class="btn btn-primary btn-sm dropdown-toggle">
 														验收单操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">查看验收单</a></li>
-														<li><a href="#">编辑验收单</a></li>
+                                                        <li><a href="#myModal" data-toggle="modal">查看验收单</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑验收单</a></li>
 														<!-- li class="divider"></li -->
-														<li><a href="#">删除验收单</a></li>
+														<li><a href="javascript:delete_fun()">删除验收单</a></li>
 													</ul>
 												</div>
 											</td>
 										</tr>
 										<tr class="gradeA">
-											<td>KXDH-HU-100092031</td>
+											<td style="color: #4792d9">KXDH-HU-100092031</td>
 											<td>高压电设备-Ex 1.0</td>
 											<td>10</td>
 											<td>设备部门</td>
@@ -523,14 +528,14 @@
 											<td>验收合格</td>
 											<td>
 												<div class="btn-group">
-													<button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
+													<button data-toggle="dropdown" type="button" class="btn btn-primary btn-sm dropdown-toggle">
 														验收单操作 <span class="caret"></span>
 													</button>
 													<ul role="menu" class="dropdown-menu">
-														<li><a href="#">查看验收单</a></li>
-														<li><a href="#">编辑验收单</a></li>
+                                                        <li><a href="#myModal" data-toggle="modal">查看验收单</a></li>
+														<li><a href="#myModal" data-toggle="modal">编辑验收单</a></li>
 														<!-- li class="divider"></li -->
-														<li><a href="#">删除验收单</a></li>
+														<li><a href="javascript:delete_fun()">删除验收单</a></li>
 													</ul>
 												</div>
 											</td>
@@ -558,6 +563,50 @@
 </section>
 
 
+<!-- Modal -->
+<div aria-hidden="true" aria-labelledby="myModalLabel" role="dialog" tabindex="-1" id="myModal" class="modal fade">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button aria-hidden="true" data-dismiss="modal" class="close" type="button">×</button>
+                <h4 class="modal-title">验收单</h4>
+            </div>
+            <div class="modal-body">
+
+                <form class="form-horizontal" role="form">
+                    <div class="form-group">
+                        <label class="col-lg-2 col-sm-2 control-label">开箱单号</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" value="KXDH-HU-100092031">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label  class="col-lg-2 col-sm-2 control-label">设备名称</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" value="摄像头摄像设备-Veide30">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label  class="col-lg-2 col-sm-2 control-label">验收人员</label>
+                        <div class="col-lg-10">
+                            <input type="text" class="form-control" value="总部验收部门">
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-lg-offset-2 col-lg-10">
+                            <button data-dismiss="modal" class="btn btn-primary" type="button">确定</button>
+                            <button data-dismiss="modal" class="btn btn-default" type="button">取消</button>
+                        </div>
+                    </div>
+                </form>
+
+            </div>
+
+        </div>
+    </div>
+</div>
+<!-- modal -->
+
 <!-- Placed js at the end of the document so the pages load faster -->
 <script src="../js/jquery-1.10.2.min.js"></script>
 <script src="../js/jquery-ui-1.9.2.custom.min.js"></script>
@@ -565,19 +614,71 @@
 <script src="../js/bootstrap.min.js"></script>
 <script src="../js/modernizr.min.js"></script>
 <script src="../js/jquery.nicescroll.js"></script>
-
-
+<!-- <!--gritter css 小提示-->
+<script src="../js/gritter/js/jquery.gritter.js" type="text/javascript"></script>
+<script src="../js/gritter/js/gritter-init.js" type="text/javascript"></script>
 <!--dynamic table-->
 <script type="text/javascript" language="javascript" src="../js/advanced-datatable/js/jquery.dataTables.js"></script>
 <script type="text/javascript" src="../js/data-tables/DT_bootstrap.js"></script>
 <!--dynamic table initialization -->
 <script type="text/javascript" src="../js/dynamic_table_init.js"></script>
-
-
+<!--jquery-confirm-->
+<script src="../js/jquery-confirm/jquery-confirm.min.js"></script>
 <!--common scripts for all pages-->
 <script src="../js/scripts.js"></script>
 <script type="text/javascript">
-    	
+    jQuery(document).ready(function() {
+        //显示小提示
+        TipsNotice(null, "验收单管理页面加载成功！");
+    });
+
+
+    function delete_fun() {
+        $.confirm({
+            icon: 'fa fa-warning',
+            title: '删除提示！',
+            content: '确定要删除该验收单吗?',
+            type: 'dark',
+            autoClose: 'cancel|8000',
+            buttons: {
+                ok: {
+                    text: "确定",
+                    btnClass: 'btn-primary',
+                    keys: ['enter'],
+                    action: function(){
+                        TipsNotice(null, "您的验收单删除成功！");
+                    }
+                },
+                cancel: {
+                    text: "取消",
+                    btnClass: 'btn-primary',
+                    keys: ['esc'],
+                    /*action:function () {
+                        console.info("你点击了取消按钮！")
+                    }*/
+                }
+            }
+        });
+    }
+
+    function add() {
+        $('#chevron-btn').removeClass("fa fa-chevron-down").addClass("fa fa-chevron-up");
+        $('#add-panel').hide();
+        TipsNotice(null,'验收单添加成功！');
+    }
+
+    function TipsNotice(title, text) {
+        $.gritter.add({
+            title: title || " 温馨提示 NOTICE ",
+            text:  text || "没有消息！",
+            image:  '../images/notice.jpg',
+            sticky: false,
+            time: 3000,
+            speed:5000,
+            position: 'bottom-right',
+            class_name: 'gritter-light'
+        });
+    }
 </script>
 
 </body>
