--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                 <ul class="nav navbar-nav">
                     <li class="active"><a href="index.html">首 页</a></li>
-                    <li><a href="综合管理.html">综合管理</a></li>
+                    <li><a href="zhgl.html">综合管理</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> 运行控制管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -72,12 +72,12 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">水雨情 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="水雨情/雨情管理.html">雨情管理</a></li>
-                            <li><a href="水雨情/雨情实时概况.html">雨情实时概况</a></li>
-                            <li><a href="水雨情/雨情报表分析.html">雨情报表分析</a></li>
-                            <li><a href="水雨情/水情管理.html">水情管理</a></li>
-                            <li><a href="水雨情/风情管理.html">风情管理</a></li>
-                            <li><a href="水雨情/潮位管理.html">潮位管理</a></li>
+                            <li><a href="syqgl/yqgl.html">雨情管理</a></li>
+                            <li><a href="syqgl/yqssgk.html">雨情实时概况</a></li>
+                            <li><a href="syqgl/yqbbfx.html">雨情报表分析</a></li>
+                            <li><a href="syqgl/sqgl.html">水情管理</a></li>
+                            <li><a href="syqgl/fqgl.html">风情管理</a></li>
+                            <li><a href="syqgl/cwgl.html">潮位管理</a></li>
                         </ul>
                     </li>
 					<li class="dropdown">
@@ -93,25 +93,25 @@
 					<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">运维管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="运维管理/验收管理.html">设备管理.验收管理</a></li>
-							<li><a href="运维管理/退货管理.html">设备管理.退货管理</a></li>
-							<li><a href="运维管理/供应商管理.html">设备管理.供应商管理</a></li>
-							<li><a href="运维管理/设备台账管理.html">设备管理.台账管理</a></li>
-							<li><a href="运维管理/维护管理.html">设备管理.维护管理</a></li>
-							<li><a href="运维管理/维修管理.html">设备管理.维修管理</a></li>
-							<li><a href="运维管理/备品备件管理.html">设备管理.备品备件管理</a></li>
-                            <li><a href="运维管理/巡检计划管理.html">巡检管理.巡检计划管理</a></li>
-							<li><a href="运维管理/巡检任务管理.html">巡检管理.巡检任务管理</a></li>
-							<li><a href="运维管理/巡检统计管理.html">巡检管理.巡检统计管理</a></li>
+                            <li><a href="ywgl/ysgl.html">设备管理.验收管理</a></li>
+							<li><a href="ywgl/thgl.html">设备管理.退货管理</a></li>
+							<li><a href="ywgl/gysgl.html">设备管理.供应商管理</a></li>
+							<li><a href="ywgl/sbtzgl.html">设备管理.台账管理</a></li>
+							<li><a href="ywgl/whgl.html">设备管理.维护管理</a></li>
+							<li><a href="ywgl/wxgl.html">设备管理.维修管理</a></li>
+							<li><a href="ywgl/bpbjgl.html">设备管理.备品备件管理</a></li>
+                            <li><a href="ywgl/xjjhgl.html">巡检管理.巡检计划管理</a></li>
+							<li><a href="ywgl/xjrwgl.html">巡检管理.巡检任务管理</a></li>
+							<li><a href="ywgl/巡检统计管理.html">巡检管理.巡检统计管理</a></li>
                         </ul>
                     </li>
 					<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">应急管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="应急管理/应急响应管理.html">应急响应管理</a></li>
-                            <li><a href="应急管理/现场指挥管理.html">现场指挥管理</a></li>
-                            <li><a href="应急管理/应急演练管理.html">应急演练管理</a></li>
-                            <li><a href="应急管理/应急信息管理.html">应急信息管理</a></li>
+                            <li><a href="yjgl/yjxygl.html">应急响应管理</a></li>
+                            <li><a href="yjgl/xczhgl.html">现场指挥管理</a></li>
+                            <li><a href="yjgl/yjylgl.html">应急演练管理</a></li>
+                            <li><a href="yjgl/yjxxgl.html">应急信息管理</a></li>
                             
                         </ul>
                     </li>
