--- a/zhgl.html
+++ b/zhgl.html
@@ -78,7 +78,7 @@
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                  <ul class="nav navbar-nav">
                     <li><a href="index.html">首 页</a></li>
-                    <li class="active"><a href="综合管理.html">综合管理</a></li>
+                    <li class="active"><a href="zhgl.html">综合管理</a></li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown"> 运行控制管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
@@ -93,7 +93,7 @@
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">水雨情 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="水雨情/雨情管理.html">雨情管理</a></li>
+                            <li><a href="syqgl/yqgl.html">雨情管理</a></li>
                             <li><a href="#">风情管理</a></li>
                             <li><a href="#">水情管理</a></li>
                             <li><a href="#">潮位管理</a></li>
