--- a/ywgl/xjrwgl.html
+++ b/ywgl/xjrwgl.html
@@ -313,7 +313,7 @@
                 <div class="col-sm-12">
                     <!--price start-->
                     <div class="text-center price-head">
-                        <h1 class="color-terques"> 待巡检&巡检中的任务 </h1>
+                        <!--<h1 class="color-terques"> 待巡检&巡检中的任务 </h1>-->
                         <!--<p>待巡检&巡检中的任务</p>-->
                     </div>
                     <div class="col-lg-3 col-sm-3">
@@ -333,7 +333,7 @@
                                 <li>巡检小组1#</li>
                             </ul>
                             <div class="price-actions">
-                                <a href="javascript:;" class="btn">开始巡检</a>
+                                <a href="javascript:;alert('任务已经同步，请到App端进行巡检')" class="btn">开始巡检</a>
                             </div>
                         </div>
                     </div>
@@ -354,7 +354,7 @@
                                 <li>巡检小组1#</li>
                             </ul>
                             <div class="price-actions">
-                                <a href="javascript:;" class="btn">开始巡检</a>
+                                <a href="javascript:;alert('任务已经同步，请到App端进行巡检')" class="btn">开始巡检</a>
                             </div>
                         </div>
                     </div>
@@ -377,7 +377,7 @@
                                 <li>巡检小组1#</li>
                             </ul>
                             <div class="price-actions">
-                                <a href="javascript:;" class="btn">开始巡检</a>
+                                <a href="javascript:;alert('任务已经同步，请到App端进行巡检')" class="btn">开始巡检</a>
                             </div>
                         </div>
                     </div>
@@ -399,7 +399,7 @@
                                 <li>巡检小组1#</li>
                             </ul>
                             <div class="price-actions">
-                                <a href="javascript:;" class="btn">跟踪巡检</a>
+                                <a href="xjrwgz.html" class="btn">跟踪巡检</a>
                             </div>
                         </div>
                     </div>
@@ -411,8 +411,7 @@
                 <div class="col-sm-12">
                     <section class="panel">
                         <header class="panel-heading">
-                            巡检计划列表
-
+                            归档巡检任务列表
                         </header>
                         <div class="panel-body">
                             <div class="adv-table">
@@ -427,7 +426,7 @@
                                         <th>巡检开始时间</th>
                                         <th>巡检结束时间</th>
                                         <th>巡检状态</th>
-                                        <th>操作</th>
+                                        <!--<th>操作</th>-->
                                     </tr>
                                     </thead>
                                     <tbody>
@@ -439,8 +438,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已巡检</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -452,7 +451,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     <tr class="gradeA">
                                         <td>XJRW-HU-20171102911</td>
@@ -462,8 +461,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已巡检</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -475,7 +474,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     <tr class="gradeA">
                                         <td>XJRW-HU-20171102911</td>
@@ -485,8 +484,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已巡检</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -498,7 +497,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     <tr class="gradeA">
                                         <td>XJRW-HU-20171102911</td>
@@ -508,8 +507,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已超时</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -521,7 +520,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     <tr class="gradeA">
                                         <td>XJRW-HU-20171102911</td>
@@ -531,8 +530,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已巡检</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -544,7 +543,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     <tr class="gradeA">
                                         <td>XJRW-HU-20171102911</td>
@@ -554,8 +553,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已巡检</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -567,7 +566,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     <tr class="gradeA">
                                         <td>XJRW-HU-20171102911</td>
@@ -577,8 +576,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已忽略</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -590,7 +589,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     <tr class="gradeA">
                                         <td>XJRW-HU-20171102911</td>
@@ -600,8 +599,8 @@
                                         <td>180分钟</td>
                                         <td>2017-11-12 09:30:00</td>
                                         <td>2017-11-12 12:30:00</td>
-                                        <td>正在巡检</td>
-                                        <td>
+                                        <td>已巡检</td>
+                                        <!--<td>
                                             <div class="btn-group">
                                                 <button data-toggle="dropdown" type="button" class="btn btn-success btn-sm dropdown-toggle">
                                                     巡检任务操作 <span class="caret"></span>
@@ -613,7 +612,7 @@
                                                 </ul>
                                             </div>
 
-                                        </td>
+                                        </td>-->
                                     </tr>
                                     </tbody>
                                 </table>
