--- a/zhgl.html
+++ b/zhgl.html
@@ -319,8 +319,8 @@
 
  <!-- main content start-->
     <div class="main-content" style="margin-left:0px;min-height:860px;">
-		<div id="mapView" style="height:860px;border:1px solid #000;margin:5px"></div>
-		<div class="tl"></div>
+		<!--<div id="mapView" style="height:860px;border:1px solid #000;margin:5px"></div>-->
+		<!--<div class="tl"></div>-->
         <!-- page heading start-->
    
         <!-- page heading end-->
@@ -389,18 +389,6 @@
 <!--common scripts for all pages-->
 <script src="js/scripts.js"></script>
 
-<script type="text/javascript" src="http://webapi.amap.com/maps?v=1.4.0&key=1020aebdfa5dfd15c5bc40bd8fc88117"></script>
-
- <script type="text/javascript">
-        var map = new AMap.Map('mapView',{
-            pitch:75,
-			
-			zoom: 13,
-			expandZoomRange:true,
-			zooms:[3,20],
-			center:[121.586777,29.8501]
-        });
-    </script>
 
 </body>
 </html>
