--- a/index_bak.html
+++ b/index_bak.html
@@ -108,7 +108,7 @@
 					<li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown">应急管理 <b class="caret"></b></a>
                         <ul class="dropdown-menu">
-                            <li><a href="yjgl/yjxygl.html">应急响应管理</a></li>
+                            <li><a href="yjgl/yjxygl-jjgl.html">应急响应管理</a></li>
                             <li><a href="yjgl/xczhgl.html">现场指挥管理</a></li>
                             <li><a href="yjgl/yjylgl.html">应急演练管理</a></li>
                             <li><a href="yjgl/yjxxgl.html">应急信息管理</a></li>
